# portalo

./: .gitignore  Cargo.toml  README.rst
android_app/: build.gradle  gradle.properties  settings.gradle
android_app/src/main/java/org/bevyengine/portalo/: MainActivity.java
android_src/: gradle.properties
android_src/app/: build.gradle
android_src/app/src/main/: AndroidManifest.xml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  progress_bar.rs
src/: discovery.rs  file_receiver.rs  file_send.rs  lib.rs  main.rs  network.rs  service.rs
