[package]
name = "portalo"

#使用workspace.package的值
version.workspace = true
edition.workspace = true

# 工作区
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
# 包版本
version = "0.0.1"
# rust版本
edition = "2024"

[dependencies]
# main使用workspace.dependencies的依赖

# portalo
portalo_core.workspace = true
portalo_discovery.workspace = true
portalo_network.workspace = true
portalo_ui.workspace = true

# Other
bevy.workspace = true
tokio.workspace = true
local-ip-address.workspace = true

[workspace.dependencies]
# 所有依赖版本

# portalo
portalo_core = { path = "crates/core", version = "0.0.1" }
portalo_discovery = { path = "crates/discovery", version = "0.0.1" }
portalo_network = { path = "crates/network", version = "0.0.1" }
portalo_ui = { path = "crates/ui", version = "0.0.1" }

# Other
mdns-sd = "0.18.0"
local-ip-address = "0.6.10"
gethostname = "1.1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
futures-lite= "2.6.1"
anyhow = "1.0"
bevy_file_dialog = "0.9.1"

[workspace.dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
	#"ui",
	"default_app",
	"default_platform",
	"picking",
	"ui_api",
	"ui_bevy_render",
	"experimental_bevy_ui_widgets",
]

[profile.dev]
# opt-level
#
# 0:   无优化
# 1:   基础优化
# 2:   一些优化
# 3:   所有优化
# "s": 针对二进制大小进行优化
# "z": 针对二进制大小进行优化，但同时关闭循环矢量化。

# 在开发模式中启用少量优化
opt-level = 1

[profile.dev.package."*"]
# 在开发模式中对依赖包启用大量优化
opt-level = 3

[profile.release]
# 以编译时间为代码，在发布模式中启用更多优化
# 优化时要考虑尺寸(也可尝试"z",有时会更好)
opt-level = "z"

# strip
#
# "none":
# "debuginfo": 删除调试信息
# "symbols": 删除更多调试信息
# 默认值为 "none"

# 从二进制文件中删除所有调试信息以稍微减小文件大小。
strip = "debuginfo"

# lto
#
# "false":
# "fat": 尝试对依赖关系图中的所有 crate 执行优化
# "thin": 类似"fat",但运行所需的时间要少得多，同时仍能实现类似于"fat"的性能提升。
# "off": 禁用lto

# 编译时间变慢，提升微乎其微
lto = "thin"

# codegen-units
# 
# 大于0的整数: 控制 crate 将拆分为多少个“代码生成单元”
# 更多的代码生成单元允许并行处理更多的 crate，可能会减少编译时间，但可能会产生更慢的代码。

# 将整个crate作为为一个单元进行编译(默认并行编译)
# 编译时间变慢，提升微乎其微
codegen-units = 1


[lib]
# Android 需要编译为 C 动态库
crate-type = ["lib", "cdylib"]
