[package]
name = "portalo_network"

#使用workspace.package的值
version.workspace = true
edition.workspace = true

[dependencies]
#使用workspace.dependencies的依赖

# portalo

# Other
bevy.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
